# sats-cs

./: README.md
databases/: Sample Database Table.xlsx
databases/Tree preprocessing/: databaseanswernode.h  databasenode.cpp  databasenode.h  databasesupernode.h  generatetree.cpp  generatetree.h
earth_image_classification/training_data_processing/: LSR_LANDSAT_8_C1_303536.csv  ResizeCrop.ipynb  imgScraper.py
imaging/: .hello.txt.swp  Centroid Tracking.ipynb  centroid_finding.py~
sims/SIM_V1/: SIM_V1.sln
sims/SIM_V1/SIM_V1/: CMakeLists.txt  ComponentWriter.h  Drag.cpp  Drag.h  DragSystem.cpp  DragSystem.h  Force.cpp  Force.h  ForceSystem.cpp  ForceSystem.h  SIM_V1.filters  SIM_V1.vcxproj  SIM_V1.vcxproj.filters  Space.cpp  Space.h  System.cpp  System.h  TestComponent.cpp  TestComponent.h  TestSystem.cpp  TestSystem.h  body.cpp  body.h  component.cpp  component.h  coreinclude.h  engine.cpp  engine.h  entity.cpp  entity.h  main.cpp  mass.cpp
sims/SIM_V1/SIM_V1/Debug/: system.obj.enc  vc141.idb
sims/SIM_V1/SIM_V1/Debug/Tyson_Sim_V1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tyson_Sim_V1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sims/SIM_V1/SIM_V1/x64/Debug/: vc141.idb
sims/SIM_V1/SIM_V1/x64/Debug/SIM_V1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SIM_V1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sims/entity-component/: component.cpp  component.h  entity.cpp  entity.h
testing/image_generation/: .imagegeneration.py.swp  image_generation.py
(+8 files in other folders)
